tests/machine/x/ocaml/slice.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/slice.ml", line 3, characters 2-15:
3 |   print_endline List.nth [1;2;3] 1
      ^^^^^^^^^^^^^
Error: This function has type string -> unit
       It is applied to too many arguments; maybe you forgot a `;'.


Context (around line 3):
   1 | 
   2 | let () =
   3 |   print_endline List.nth [1;2;3] 1
   4 |   print_endline List.nth [1;2;3] 0
   5 |   print_endline List.nth "hello" 1
