tests/machine/x/ocaml/slice.ml

let () =
  print_endline List.nth [1;2;3] 1
  print_endline List.nth [1;2;3] 0
  print_endline List.nth "hello" 1
